2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf-property-editor.c: (gconf_peditor_new): Plug a leak
	* gnome-theme-info.c: (top_theme_dir_changed),
	(top_icon_theme_dir_changed), (real_add_top_theme_dir_monitor):
	Plug leaks and fix invalid reads reported by valgrind.

2003-03-27  Andrew Sobala  <aes@gnome.org>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(update_common_theme_dir_index):
	s/read_meta_theme/gnome_theme_read_meta_theme/; enable the reading of
	themes that just use [X-GNOME-Metatheme] without pretending to be a
	.desktop file
	* gnome-theme-info.h: exposed gnome_theme_read_meta_theme

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

2003-02-03  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-info.c (read_meta_theme): Fix a glaring bug
	that caused the theme descriptions etc not to be localised.
	Fix from Dmitry G. Mastrukov <dmitry@taurussoft.org>. Fixes
	#104296
	
2003-01-27  Bastien Nocera  <hadess@hadess.net>

	* gnome-theme-test.c: (main): C ninety what ?

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Sun Jan 19 02:14:35 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-test.c (main): add more debugging output.

Thu Jan 16 15:51:33 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-test.c: new little test program for helping people
	debug their installation.

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

Wed Jan 15 20:16:21 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-info.c (remove_data_from_hash_by_name): call
	correctly in all the right places.

Mon Jan 13 15:04:47 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-info.c: rewrote to handle fam more correctly.  Still
	a little broken in places, but much, much better than before.

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-28  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am: