@@ -1,3 +1,8 @@
+2003-06-30  Anders Carlsson  <andersca@codefactory.se>
+
+	* gconf-property-editor.c: (gconf_property_editor_finalize):
+	If we've added a gconf callback, make sure to remove it.
+	
 2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gconf-property-editor.c: (gconf_peditor_new): Plug a leak
